add height limit of x timeline

--- a/index.html
+++ b/index.html
@@ -204,6 +204,8 @@
         <h2>Twitter</h2>
         <a
           class="twitter-timeline"
+          data-width="400"
+          data-height="500"
           href="https://twitter.com/XJapanOfficial?ref_src=twsrc%5Etfw"
           >Tweets by XJapanOfficial</a
         >
